ci: build with run_gui.py script; fix PyInstaller scriptname error

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -21,7 +21,7 @@ jobs:
           python -m playwright install chromium
       - name: Build (one-file, GUI)
         run: |
-          pyinstaller -F -w --name gTakeOutThis --collect-all PySide6 -m gtakeout.ui
+          pyinstaller -F -w --name gTakeOutThis --collect-all PySide6 run_gui.py
       - name: Upload artifact
         uses: actions/upload-artifact@v4
         with:
